--- a/styles/ImageGrid.module.css
+++ b/styles/ImageGrid.module.css
@@ -1,8 +1,19 @@
+/* imageGrid.module.css */
+
+.loadingContainer {
+  display: flex;
+  justify-content: center; /* Center orizontally */
+  align-items: center; /* Center vertically */
+  height: 100vh;
+  position: relative;
+  top: 400px;
+}
+
 .analyzeSection {
   width: 100%;
   height: 1322px; /* Match the height of greyBg */
   background: #F8F8F8; /* Same background color as greyBg */
-  position: relative; /* Assuming you want to position content inside analyzeSection absolutely */
+  position: relative;
   top: 544px;
 }
 
@@ -16,7 +27,7 @@
   position: relative;
   top: 32px;
   left: 128px;
-}
+} 
 
 .imageGrid {
   display: grid;
