--- a/styles/Category.module.css
+++ b/styles/Category.module.css
@@ -2,11 +2,9 @@
 
 .buttonContainer {
     display: flex;
-    position: relative;
-    top: 176px;
-    left: 128px;
+    margin-top: 100px; /* Space from the top of the parent container */
 }
-  
+
 .buttonContainer button {
     width: 192px;
     height: 48px;
