--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -5,7 +5,7 @@
   flex-direction: column; /* Stack children vertically */
   align-items: flex-start; /* Align children to the start of the flex container */
   position: relative;
-  margin-top: 317px; /* Space from the top of the page or previous content */
+  margin-top: 253px; /* Space from the header */
   margin-left: 100px;
 }
 
