--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,47 +1,44 @@
 /* Header.module.css */
 
-.centerNav {
-    align-items: center;
-    justify-content: center;
-    margin-top: -.5vw;
-}
-
 .navBar {
     color: #FFFFFF;
     display: flex;
-    padding-left: 100px;
+    justify-content: space-between; /* separate the left and right tabs */
+    padding-left: 128px;
+    padding-right: 140px;
+    border-bottom: 1px solid #DEE4E1;
+    height: 64px;
+    width: 1235px;
 }
 
-.leftTabs {
+.leftTabs, .rightTabs {
     display: flex;
-    align-items: center;
-    margin-right: 10vw;
+    align-items: center; /* Align items in the center vertically */
 }
 
-.rightTabs {
-    display: flex;
-    align-items: center;
-    margin-left: 35vw;
+.navItem, .navWeaudit, .navOuro{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    text-decoration: none;
+    font-weight: 400;
 }
 
 .navItem {
     color: #7B7B7B;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    margin-top: 2vw;
-    text-decoration: none;
 }
 
-.selectedNavItem {
-    color: black;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+.navWeaudit {
     font-weight: 700;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    margin-top: 2vw;
-    text-decoration: none;
+    color: #000000;
+}
+
+.navOuro {
+    font-weight: 600;
+    color: #606060;
+}
+
+.navIcon {
+    margin-left: 127px;
 }
