[Feature] add icons and prompt

--- a/styles/Analyze.module.css
+++ b/styles/Analyze.module.css
@@ -49,3 +49,40 @@
     line-height: 40px; /* 125% */
     margin: 0; /* Reset any default margins */
 }
+
+.promptIconContainer {
+    display: flex;
+    justify-content: space-between; /* separate the left and right */
+    margin-top: 39px;
+}
+
+.analyzePrompt, .analyzeIconContainer {
+    display: flex;
+    align-items: center; /* Align items in the center vertically */
+}
+
+.analyzePrompt {
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 26px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #7B7B7B;
+}
+
+.promptResult {
+    color: #000;
+}
+
+.analyzeIconContainer {
+    margin-right: 5px;
+}
+
+.analyzeIcon {
+    margin-left: 19px; /* Add some space between the icons */
+}
+
+.analyzeIcon:hover {
+    cursor: pointer;
+}
