[Feature] add mainTitle

--- a/styles/Analyze.module.css
+++ b/styles/Analyze.module.css
@@ -1,5 +1,20 @@
 /* Analyze.module.css */
 
+.mainTitle {
+    margin-top: 29px;
+    width: 189px;
+    height: 52px;
+    font-family: Roboto;
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 52px;
+    letter-spacing: 0em;
+    text-align: center;
+    /* margin-left: calc(50% - 95px - 10px); */
+    margin-left: 627px;
+    margin-right: auto;
+}
+
 .loadingContainer {
     display: flex;
     justify-content: center; /* Center orizontally */
