--- a/styles/ImageGrid.module.css
+++ b/styles/ImageGrid.module.css
@@ -27,8 +27,10 @@
   display: grid;
   width: 762px;
   height: 763px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  /* grid-template-columns: repeat(3, 1fr); */
+  /* grid-template-rows: repeat(3, 1fr); */
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   grid-gap: 0; /* no gap between images */
   margin-top: 48px; /* space from imageBox */
 }
