--- a/styles/GenerateState.module.css
+++ b/styles/GenerateState.module.css
@@ -27,7 +27,7 @@
 }
 
 .stateLabels {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
