--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -62,7 +62,7 @@
 }
 
 .searchButtonText {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
